--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
   <p>Vincent's heart raced with a mixture of curiosity and unease. The mansion seemed to have a life of its own, drawing him further into its enigmatic embrace. Despite the chilling atmosphere, he couldn't deny the thrill that surged through his veins.</p>
   <p>As he entered a dimly lit study, a sudden gust of wind extinguished the flickering candle, plunging the room into darkness. Vincent's hand instinctively reached for his pocket, searching for a source of light. His fingers closed around a small flashlight, providing him with a faint beam to navigate the room.
 
-The pale light revealed a dusty desk covered in faded parchments and a worn-out leather-bound book. Vincent's eyes widened as he recognized the family crest on the cover—a relic of his ancestry. Trembling, he reached for the book, his fingertips grazing the weathered pages.</p>
+The pale light revealed a dusty desk covered in faded parchments and a worn-out leather-bound book. Vincent's eyes widened as he recognized the family crest on the coverÂ—a relic of his ancestry. Trembling, he reached for the book, his fingertips grazing the weathered pages.</p>
   <p>Just as he was about to open it, a chilling breeze swept through the room, causing the pages to flutter ominously. Vincent hesitated, momentarily unsure of whether to proceed. But the allure of his family's history and the mysteries that lay within the mansion compelled him to continue his exploration.
 
 Taking a deep breath, Vincent turned the first page, revealing a handwritten account of a tragic love affair that had unfolded within these very walls. The words painted a vivid picture of heartache and despair, of forbidden desires and tormented souls.</p>
    <p>As he delved deeper into the narrative, Vincent became acutely aware of a growing presence around him. Whispers seemed to echo in his ears, mingling with the rustling of pages. Shadows danced on the walls, taking on ethereal forms that sent shivers down his spine.
 
-Unbeknownst to Vincent, he had unwittingly awakened something within the mansion—a restless spirit that hungered for resolution and release. The more he uncovered, the stronger the spectral energy became, enveloping him in its invisible grasp.
+Unbeknownst to Vincent, he had unwittingly awakened something within the mansionÂ—a restless spirit that hungered for resolution and release. The more he uncovered, the stronger the spectral energy became, enveloping him in its invisible grasp.
 
 Now standing at the precipice of the mansion's secrets, Vincent was faced with a choice. Would he continue his pursuit of the truth, risking his own sanity and well-being, or would he heed the warnings of the haunted whispers and flee from the darkness that threatened to consume him?
 
